package com.proxy;

/**
 * 一句话概括功能。
 *
 * @author huminxi huminxi@shein.com
 * @since 2021/07/04 16:52
 */
public interface Subject {
    void action();
}
